Fix errors in by-topic and jdk25 sub-files (round 6 continued)
crypto/index.md: Removed fabricated TLS 1.4, fixed TLS 1.2 version (JDK 7 not 6), removed wrong JSR 106, fixed SHA-3 not being post-quantum
platform/linux: Removed invalid ActiveProcessorCount=auto, removed fabricated io_uring JDK 21 support
api/datetime: Removed false Date/Calendar @Deprecated claims for JDK 21
api/index.md: Fixed JDBC 4.0 version (JDK 6 not 5), removed nonexistent JDBC 4.4
jdk25/release-notes.md: Removed more wrong JEP entries from other versions
jdk25/migration/from-21.md: Removed withdrawn String Templates, removed deprecated ZGenerational flag

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>